# Amethyst

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.fleet/: receipt.json
.github/: copilot-instructions.md
.github/workflows/: ios-testflight.yml  release.yml
composeApp/: build.gradle.kts  proguard-rules.pro
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/commonMain/composeResources/drawable/: amethyst_macos.icns
docs/: MIDI_TIMELINE.md
gradle/: libs.versions.toml
iosApp/: Gemfile
iosApp/Configuration/: Config.xcconfig
iosApp/ci_scripts/: ci_post_clone.sh  ci_pre_xcodebuild.sh
iosApp/fastlane/: Appfile  Fastfile  Matchfile
iosApp/iosApp/: AmethystTheme.swift  ContentView.swift  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp.xcodeproj/xcshareddata/xcschemes/: iosApp.xcscheme
iosApp/iosApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
iosApp/iosApp/Home/: AbletonImportWizardSheet.swift  HomeViewModel.swift  ProjectCreationSheet.swift  ProjectsTabView.swift  RecentProjectRow.swift
iosApp/iosApp/Settings/: SettingsTabView.swift  SettingsViewModel.swift
iosApp/iosApp/Utils/: ZipImplementation.swift
nativeEngine/: build.gradle.kts
nativeEngine/rust/: Cargo.toml
nativeEngine/rust/src/: echo.rs  lib.rs
nativeEngine/rust/src/midi/: access.rs  connection.rs  error.rs  event.rs  grouping.rs  mod.rs  parser.rs  types.rs
nativeEngine/rust/src/midi/backend/: alsa_backend.rs  coremidi_backend.rs  mod.rs  winrt_backend.rs
(+920 files in other folders)
