[package]
name = "amethyst-native-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
uniffi = "0.29.4"

[target.'cfg(target_os = "macos")'.dependencies]
coremidi = "0.8.0"
coremidi-sys = "3.2.0"
core-foundation = "0.9.4"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "Devices_Midi",
    "Devices_Enumeration",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
    "Win32_System_Com",
] }

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
